2006-08-25  Jan Hubicka  <jh@suse.cz>

PR target/28621
	* config/i386/crtfastmath.c (set_fast_math): Force stack alignment.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116431 138bc75d-0d04-0410-961f-82ee72b054a4